fixed 'light & dark mode' in 'Create' component input fields

--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -36,3 +36,19 @@
 .create.dark span {
     color: #e4e4e4;
 }
+.create input, textarea {
+    background-color: #e3e3e3;
+    color: #333;
+}
+.create.dark input, textarea {
+    background-color: #333;
+    color: #e3e3e3;
+}
+.create textarea {
+    background-color: #e3e3e3;
+    color: #333;
+}
+.create.dark textarea {
+    background-color: #333;
+    color: #e3e3e3;
+}
